Modify test cases for date format

--- a/js/test/daterange/test/testDateFmtRangeCompiled.html
+++ b/js/test/daterange/test/testDateFmtRangeCompiled.html
@@ -25,6 +25,7 @@ limitations under the License.
 <script language="JavaScript" src="testdatefmtrange_am_ET.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ar_SA.js"></script>
 <script language="JavaScript" src="testdatefmtrange_as_IN.js"></script>
+<script language="JavaScript" src="testdatefmtrange_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bg_BG.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bn_IN.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bs_Latn_BA.js"></script>
