--- a/js/test/date/test/testDateDyn.html
+++ b/js/test/date/test/testDateDyn.html
@@ -23,7 +23,7 @@ limitations under the License.
 <script language="JavaScript" src="../../../lib/ilib-web.js"></script>
 <script language="JavaScript">
 if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
-	// work-around for Opera, which only puts the language "en" into the navigator.language 
+	// work-around for Opera, which only puts the language "en" into the navigator.language
 	// instead of the whole locale "en-US" which the unit tests expect
 	navigator.language = "en-US";
 }
@@ -33,6 +33,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdatefmt_am_ET.js"></script>
 <script language="JavaScript" src="testdatefmt_ar_SA.js"></script>
 <script language="JavaScript" src="testdatefmt_as_IN.js"></script>
+<script language="JavaScript" src="testdatefmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdatefmt_bg.js"></script>
 <script language="JavaScript" src="testdatefmt_bn_IN.js"></script>
 <script language="JavaScript" src="testdatefmt_bs_Cyrl_BA.js"></script>
