--- a/js/test/durfmt/test/testDurFmt.html
+++ b/js/test/durfmt/test/testDurFmt.html
@@ -25,6 +25,7 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt.js"></script>
 <script language="JavaScript" src="testdurfmt_am_ET.js"></script>
 <script language="JavaScript" src="testdurfmt_ar_SA.js"></script>
+<script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdurfmt_or_IN.js"></script>
 <script language="JavaScript" src="testdurfmt_ha_Latn_NG.js"></script>
 </head>
