--- a/js/test/durfmt/test/testDurFmtCompiled.html
+++ b/js/test/durfmt/test/testDurFmtCompiled.html
@@ -25,5 +25,6 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt.js"></script>
 <script language="JavaScript" src="testdurfmt_am_ET.js"></script>
 <script language="JavaScript" src="testdurfmt_ar_SA.js"></script>
+<script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 </head>
 </html>
