--- a/js/test/daterange/test/testDateFmtRangeDyn.html
+++ b/js/test/daterange/test/testDateFmtRangeDyn.html
@@ -33,6 +33,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdatefmtrange_am_ET.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ar_SA.js"></script>
 <script language="JavaScript" src="testdatefmtrange_as_IN.js"></script>
+<script language="JavaScript" src="testdatefmtrange_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bg_BG.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bn_IN.js"></script>
 <script language="JavaScript" src="testdatefmtrange_bs_Latn_BA.js"></script>
