--- a/js/test/durfmt/test/testDurFmtDyn.html
+++ b/js/test/durfmt/test/testDurFmtDyn.html
@@ -31,6 +31,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdurfmt.js"></script>
 <script language="JavaScript" src="testdurfmt_am_ET.js"></script>
 <script language="JavaScript" src="testdurfmt_ar_SA.js"></script>
+<script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdurfmt_or_IN.js"></script>
 <script language="JavaScript" src="testdurfmt_ha_Latn_NG.js"></script>
 </head>
