--- a/js/test/daterange/test/tempTestDateFmtRange.html
+++ b/js/test/daterange/test/tempTestDateFmtRange.html
@@ -1,5 +1,5 @@
-<!--
-testDateFmtRange_or_IN.html - Test the date range formatter
+	<!--
+testDateFmtRange.html - Test the date range formatter
 
 Copyright © 2012-2016, JEDLSoft
 
@@ -22,6 +22,13 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmtrange_or_IN.js"></script>
+<script language="JavaScript" src="testdatefmtrange_fa_IR.js"></script>
+<!--<script language="JavaScript" src="testdatefmtrange_af_NA.js"></script>
+<script language="JavaScript" src="testdatefmtrange_fr_CA.js"></script>
+<script language="JavaScript" src="testdatefmtrange_hu_HU.js"></script>
+<script language="JavaScript" src="testdatefmtrange_ja_JP.js"></script>
+<script language="JavaScript" src="testdatefmtrange_ko_KR.js"></script>-->
+
+
 </head>
 </html>
