--- a/js/test/daterange/test/testDateFmtRangeDyn.html
+++ b/js/test/daterange/test/testDateFmtRangeDyn.html
@@ -1,7 +1,7 @@
 <!--
 testDateFmtRangeDyn.html - Test the date range formatter
 
-Copyright © 2015, JEDLSoft
+Copyright © 2015-2016, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
