--- a/js/test/daterange/test/testDateFmtRange_en_GB.html
+++ b/js/test/daterange/test/testDateFmtRange_en_GB.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmtRange_eb_GB.html - Test the date range formatter
+testDateFmtRange_en_GB.html - Test the date range formatter
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2012-2016, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
