Add unittest case for supporting km-KH locale and modify resource files

--- a/js/test/date/test/testDateFmt_km_KH.html
+++ b/js/test/date/test/testDateFmt_km_KH.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmtCompiled_az_Latn_AZ.html - Test the date range formatter
+testDateFmt_km_KH.html - Test the date formatter
 
-Copyright © 2012-2016, JEDLSoft
+Copyright © 2016, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -22,6 +22,7 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmtrange_az_Latn_AZ.js"></script>
+<script language="JavaScript" src="testdatefmt_km_KH.js"></script>
 </head>
 </html>
+
