--- a/js/test/daterange/test/testDateFmtRange.html
+++ b/js/test/daterange/test/testDateFmtRange.html
@@ -61,6 +61,7 @@ limitations under the License.
 <script language="JavaScript" src="testdatefmtrange_kk_Cyrl_KZ.js"></script>
 <script language="JavaScript" src="testdatefmtrange_kn_IN.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ko_KR.js"></script>
+<script language="JavaScript" src="testdatefmtrange_km_KH.js"></script>
 <!-- script language="JavaScript" src="testdatefmtrange_ku_Arab_IQ.js"></script -->
 <script language="JavaScript" src="testdatefmtrange_lt_LT.js"></script>
 <script language="JavaScript" src="testdatefmtrange_lv_LV.js"></script>
