--- a/js/test/durfmt/test/testdurfmt_km_KH.html
+++ b/js/test/durfmt/test/testdurfmt_km_KH.html
@@ -1,5 +1,5 @@
 <!--
-testDateFmt_az_AZ.html - Test the date formatter
+testDurFmt_km_KH.html - Test the duration formatter
 
 Copyright © 2016, JEDLSoft
 
@@ -22,7 +22,6 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmt_az_Latn_AZ.js"></script>
+<script language="JavaScript" src="testDurFmt_km_KH.js"></script>
 </head>
 </html>
-
