--- a/js/test/durfmt/test/testDurFmt.html
+++ b/js/test/durfmt/test/testDurFmt.html
@@ -28,5 +28,6 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdurfmt_or_IN.js"></script>
 <script language="JavaScript" src="testdurfmt_ha_Latn_NG.js"></script>
+<script language="JavaScript" src="testdurfmt_km_KH.js"></script>
 </head>
 </html>
