--- a/js/test/date/test/testDateFmtCompiled.html
+++ b/js/test/date/test/testDateFmtCompiled.html
@@ -22,7 +22,7 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut-compiled.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<!--   script language="JavaScript" src="testdatefmt_ku_Arab_IQ.js"></script -->
+
 <!-- script language="JavaScript" src="testdatefmt_mn_Cyrl_MN.js"></script -->
 <!--  script language="JavaScript" src="testdatefmt_uz_Cyrl_UZ.js"></script -->
 <script language="JavaScript" src="testdatefmt_af_ZA.js"></script>
@@ -63,7 +63,7 @@ limitations under the License.
 <script language="JavaScript" src="testdatefmt_kk_Cyrl_KZ.js"></script>
 <script language="JavaScript" src="testdatefmt_kn_IN.js"></script>
 <script language="JavaScript" src="testdatefmt_ko_KR.js"></script>
-<!-- script language="JavaScript" src="testdatefmt_ku_Arab_IQ.js"></script -->
+<script language="JavaScript" src="testdatefmt_ku_Arab_IQ.js"></script>
 <script language="JavaScript" src="testdatefmt_lt_LT.js"></script>
 <script language="JavaScript" src="testdatefmt_lv_LV.js"></script>
 <script language="JavaScript" src="testdatefmt_mk_MK.js"></script>
