--- a/js/test/daterange/test/testDateFmtRangeDyn.html
+++ b/js/test/daterange/test/testDateFmtRangeDyn.html
@@ -66,7 +66,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdatefmtrange_kk_Cyrl_KZ.js"></script>
 <script language="JavaScript" src="testdatefmtrange_kn_IN.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ko_KR.js"></script>
-<!-- script language="JavaScript" src="testdatefmtrange_ku_Arab_IQ.js"></script -->
+<script language="JavaScript" src="testdatefmtrange_ku_Arab_IQ.js"></script>
 <script language="JavaScript" src="testdatefmtrange_lt_LT.js"></script>
 <script language="JavaScript" src="testdatefmtrange_lv_LV.js"></script>
 <script language="JavaScript" src="testdatefmtrange_mk_MK.js"></script>
