More Fix for support az-Latn-AZ and km-KH. Files missed in Unittest list

--- a/js/test/date/test/testDateFmtCompiled.html
+++ b/js/test/date/test/testDateFmtCompiled.html
@@ -28,6 +28,7 @@ limitations under the License.
 <script language="JavaScript" src="testdatefmt_am_ET.js"></script>
 <script language="JavaScript" src="testdatefmt_ar_SA.js"></script>
 <script language="JavaScript" src="testdatefmt_as_IN.js"></script>
+<script language="JavaScript" src="testdatefmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdatefmt_bg.js"></script>
 <script language="JavaScript" src="testdatefmt_bn_IN.js"></script>
 <script language="JavaScript" src="testdatefmt_bs_Cyrl_BA.js"></script>
@@ -59,6 +60,7 @@ limitations under the License.
 <script language="JavaScript" src="testdatefmt_ja_JP.js"></script>
 <script language="JavaScript" src="testdatefmt.js"></script>
 <script language="JavaScript" src="testdatefmt_kk_Cyrl_KZ.js"></script>
+<script language="JavaScript" src="testdatefmt_km_KH.js"></script>
 <script language="JavaScript" src="testdatefmt_kn_IN.js"></script>
 <script language="JavaScript" src="testdatefmt_ko_KR.js"></script>
 <script language="JavaScript" src="testdatefmt_ku_Arab_IQ.js"></script>
