--- a/js/test/daterange/test/testDateFmtRangeDyn.html
+++ b/js/test/daterange/test/testDateFmtRangeDyn.html
@@ -65,6 +65,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdatefmtrange_ja_JP.js"></script>
 <script language="JavaScript" src="testdatefmtrange.js"></script>
 <script language="JavaScript" src="testdatefmtrange_kk_Cyrl_KZ.js"></script>
+<script language="JavaScript" src="testdatefmtrange_km_KH.js"></script>
 <script language="JavaScript" src="testdatefmtrange_kn_IN.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ko_KR.js"></script>
 <script language="JavaScript" src="testdatefmtrange_ku_Arab_IQ.js"></script>
