--- a/js/test/durfmt/test/testdurfmt_az_Latn_AZ.html
+++ b/js/test/durfmt/test/testdurfmt_az_Latn_AZ.html
@@ -22,6 +22,6 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testDurFmt_az_Latn_AZ.js"></script>
+<script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 </head>
 </html>
