Fix durfmt unittest fail casea in az-Latn-AZ

--- a/js/test/durfmt/test/testDurFmtCompiled.html
+++ b/js/test/durfmt/test/testDurFmtCompiled.html
@@ -26,5 +26,6 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt_am_ET.js"></script>
 <script language="JavaScript" src="testdurfmt_ar_SA.js"></script>
 <script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
+<script language="JavaScript" src="testdurfmt_km_KH.js"></script>
 </head>
 </html>
