--- a/js/test/date/test/testDateDyn.html
+++ b/js/test/date/test/testDateDyn.html
@@ -67,6 +67,7 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdatefmt.js"></script>
 <script language="JavaScript" src="testdatefmt_kk_Cyrl_KZ.js"></script>
 <script language="JavaScript" src="testdatefmt_kn_IN.js"></script>
+<script language="JavaScript" src="testdatefmt_km_KH.js"></script>
 <script language="JavaScript" src="testdatefmt_ko_KR.js"></script>
 <!-- script language="JavaScript" src="testdatefmt_ku_Arab_IQ.js"></script -->
 <script language="JavaScript" src="testdatefmt_lt_LT.js"></script>
