--- a/js/test/daterange/test/testDateFmtRangeCompiled_az_Latn_AZ.html
+++ b/js/test/daterange/test/testDateFmtRangeCompiled_az_Latn_AZ.html
@@ -1,5 +1,5 @@
 <!--
-testDateFmtCompiled_km_KH.html - Test the date range formatter
+testDateFmtRangeCompiled_az_Latn_AZ.html - Test the date range formatter
 
 Copyright © 2012-2016, JEDLSoft
 
@@ -22,6 +22,6 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmtrange_km_KH.js"></script>
+<script language="JavaScript" src="testdatefmtrange_az_Latn_AZ.js"></script>
 </head>
 </html>
