--- a/js/test/durfmt/test/testDurFmt_km_KH.html
+++ b/js/test/durfmt/test/testDurFmt_km_KH.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmt_pt.html - Test the date formatter object in Portuguese
+testDurFmt_km_KH.html - Test the duration formatter
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2016, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -19,9 +19,9 @@ limitations under the License.
 
 <html>
 <head>
-<script type="text/javascript" src="../../../tools/jsunit/app/jsUnitCore.js"></script>
-<script language="JavaScript" src="../../output/js/ilib-ut-compiled.js"></script>
-<script language="JavaScript" src="../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmt_pt_BR.js"></script>
+<script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
+<script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
+<script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
+<script language="JavaScript" src="testdurfmt_km_KH.js"></script>
 </head>
 </html>
