Add test cases for si-LK locale

--- a/js/test/durfmt/test/testDurFmt.html
+++ b/js/test/durfmt/test/testDurFmt.html
@@ -29,5 +29,6 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt_or_IN.js"></script>
 <script language="JavaScript" src="testdurfmt_ha_Latn_NG.js"></script>
 <script language="JavaScript" src="testdurfmt_km_KH.js"></script>
+<script language="JavaScript" src="testdurfmt_si_LK.js"></script>
 </head>
 </html>
