--- a/js/test/durfmt/test/testDurFmtCompiled.html
+++ b/js/test/durfmt/test/testDurFmtCompiled.html
@@ -27,5 +27,6 @@ limitations under the License.
 <script language="JavaScript" src="testdurfmt_ar_SA.js"></script>
 <script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 <script language="JavaScript" src="testdurfmt_km_KH.js"></script>
+<script language="JavaScript" src="testdurfmt_si_LK.js"></script>
 </head>
 </html>
