--- a/js/test/durfmt/test/testDurFmtDyn.html
+++ b/js/test/durfmt/test/testDurFmtDyn.html
@@ -35,5 +35,6 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testdurfmt_or_IN.js"></script>
 <script language="JavaScript" src="testdurfmt_ha_Latn_NG.js"></script>
 <script language="JavaScript" src="testdurfmt_km_KH.js"></script>
+<script language="JavaScript" src="testdurfmt_si_LK.js"></script>
 </head>
 </html>
