Initial API for the list formatter class

--- a/js/test/strings-ext/test/testListFmt.html
+++ b/js/test/strings-ext/test/testListFmt.html
@@ -1,7 +1,7 @@
 <!--
-testNorm.html - Test the string normalizer
+testListFmt.html - Test the list formatter
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -21,8 +21,6 @@ limitations under the License.
 <head>
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
-<script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="normdata.js"></script>
-<script language="JavaScript" src="testnorm.js"></script>
+<script language="JavaScript" src="testlistfmt.js"></script>
 </head>
 </html>
