--- a/js/test/daterange/test/testDateFmtRangeCompiled_fr.html
+++ b/js/test/daterange/test/testDateFmtRangeCompiled_fr.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmt_ja_JP.html - Test the date formatter object in Japanese
+testDateFmtRangeCompiled_fr.html - Test the date formatter object in French
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2012-2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -19,9 +19,10 @@ limitations under the License.
 
 <html>
 <head>
-<script type="text/javascript" src="../../../tools/jsunit/app/jsUnitCore.js"></script>
-<script language="JavaScript" src="../../output/js/ilib-ut-compiled.js"></script>
-<script language="JavaScript" src="../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmt_ja_JP.js"></script>
+<script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
+<script language="JavaScript" src="../../../output/js/ilib-ut-compiled.js"></script>
+<script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
+<script language="JavaScript" src="testdatefmtrange_fr_FR.js"></script>
+<script language="JavaScript" src="testdatefmtrange_fr_CA.js"></script>
 </head>
 </html>
