--- a/js/test/daterange/test/testDateFmtRangeCompiled_id_ID.html
+++ b/js/test/daterange/test/testDateFmtRangeCompiled_id_ID.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmt_zh_CN.html - Test the date formatter object in Chinese
+testDateFmtRangeCompiled_id_ID.html - Test the date formatter object in Indonesian
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2012-2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -19,9 +19,9 @@ limitations under the License.
 
 <html>
 <head>
-<script type="text/javascript" src="../../../tools/jsunit/app/jsUnitCore.js"></script>
-<script language="JavaScript" src="../../output/js/ilib-ut-compiled.js"></script>
-<script language="JavaScript" src="../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmt_zh_CN.js"></script>
+<script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
+<script language="JavaScript" src="../../../output/js/ilib-ut-compiled.js"></script>
+<script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
+<script language="JavaScript" src="testdatefmtrange_id_ID.js"></script>
 </head>
 </html>
