--- a/js/test/daterange/test/testDateFmtRangeCompiled_pt.html
+++ b/js/test/daterange/test/testDateFmtRangeCompiled_pt.html
@@ -1,7 +1,7 @@
 <!--
-testDateFmt_en.html - Test the date formatter object in English
+testDateFmtRangeCompiled_pt.html - Test the date formatter object in Portuguese
 
-Copyright © 2012-2015, JEDLSoft
+Copyright © 2012-2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -22,9 +22,6 @@ limitations under the License.
 <script type="text/javascript" src="../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../output/js/ilib-ut-compiled.js"></script>
 <script language="JavaScript" src="../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testdatefmt_en_US.js"></script>
-<script language="JavaScript" src="testdatefmt_en_CA.js"></script>
-<script language="JavaScript" src="testdatefmt_en_GB.js"></script>
-<script language="JavaScript" src="testdatefmt_en_IN.js"></script>
+<script language="JavaScript" src="testdatefmtrange_pt_BR.js"></script>
 </head>
 </html>
