Add new class for Country name

--- a/js/test/root/test/testRootDyn.html
+++ b/js/test/root/test/testRootDyn.html
@@ -38,5 +38,6 @@ if (ilib._getPlatform() === "browser" && ilib._getBrowser() === "opera") {
 <script language="JavaScript" src="testresources.js"></script>
 <script language="JavaScript" src="testscriptinfo.js"></script>
 <script language="JavaScript" src="testcharset.js"></script>
+<script language="JavaScript" src="testcountry.js"></script>
 </head>
 </html>
