--- a/js/test/root/test/testSuite.html
+++ b/js/test/root/test/testSuite.html
@@ -36,6 +36,7 @@ function suite() {
     s.addTestPage(dir + "testGlobal.html");
     s.addTestPage(dir + "testScriptInfo.html");
     s.addTestPage(dir + "testCharset.html");
+    s.addTestPage(dir + "testCountry.html");
 
     s.addTestPage(dir + "testLocaleCompiled.html");
     s.addTestPage(dir + "testLocaleInfoCompiled.html");
@@ -44,6 +45,7 @@ function suite() {
     s.addTestPage(dir + "testGlobalCompiled.html");
     s.addTestPage(dir + "testScriptInfoCompiled.html");
     s.addTestPage(dir + "testCharsetCompiled.html");
+    s.addTestPage(dir + "testCountryCompiled.html");
 
     return s;
 }
