--- a/js/test/durfmt/test/testdurfmt_az_Latn_AZ.html
+++ b/js/test/durfmt/test/testdurfmt_az_Latn_AZ.html
@@ -1,7 +1,7 @@
 <!--
 testDurFmt_az_Latn_AZ.html - Test the duration formatter
 
-Copyright © 2016, JEDLSoft
+Copyright © 2016-2017, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -22,6 +22,6 @@ limitations under the License.
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
-<script language="JavaScript" src="testDurFmt_az_Latn_AZ.js"></script>
+<script language="JavaScript" src="testdurfmt_az_Latn_AZ.js"></script>
 </head>
 </html>
