More fixes ... still doesn't work yet

--- a/js/test/maps/nodeunit/testSuite.html
+++ b/js/test/maps/nodeunit/testSuite.html
@@ -24,6 +24,7 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
+    <script src="/test/test/assertSupplement.js"></script>
     <script src="/output/js/ilib-ut.js"></script>
     <script>
         module = {
