Add more unittest to verify APIs

--- a/js/test/strings-ext/test/testListFmtCompiled.html
+++ b/js/test/strings-ext/test/testListFmtCompiled.html
@@ -21,6 +21,11 @@ limitations under the License.
 <head>
 <script type="text/javascript" src="../../../../tools/jsunit/app/jsUnitCore.js"></script>
 <script language="JavaScript" src="../../../output/js/ilib-ut-compiled.js"></script>
+<script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
 <script language="JavaScript" src="testlistfmt.js"></script>
+<script language="JavaScript" src="testlistfmt_es.js"></script>
+<script language="JavaScript" src="testlistfmt_fr_FR.js"></script>
+<script language="JavaScript" src="testlistfmt_ja_JP.js"></script>
+<script language="JavaScript" src="testlistfmt_zh.js"></script>
 </head>
 </html>
