--- a/js/test/strings-ext/test/testListFmt.html
+++ b/js/test/strings-ext/test/testListFmt.html
@@ -23,5 +23,9 @@ limitations under the License.
 <script language="JavaScript" src="../../../output/js/ilib-ut.js"></script>
 <script language="JavaScript" src="../../../lib/ilib-stubs-map.js"></script>
 <script language="JavaScript" src="testlistfmt.js"></script>
+<script language="JavaScript" src="testlistfmt_es.js"></script>
+<script language="JavaScript" src="testlistfmt_fr_FR.js"></script>
+<script language="JavaScript" src="testlistfmt_ja_JP.js"></script>
+<script language="JavaScript" src="testlistfmt_zh.js"></script>
 </head>
 </html>
