Convert the list formatter tests to nodeunit

--- a/js/test/strings-ext/nodeunit/testSuite.html
+++ b/js/test/strings-ext/nodeunit/testSuite.html
@@ -31,6 +31,14 @@ limitations under the License.
         };
     </script>
     <script src="testglyphstr.js"></script>
+    <script src="testlistfmt.js"></script>
+    <script src="testlistfmt_ar.js"></script>
+    <script src="testlistfmt_en.js"></script>
+    <script src="testlistfmt_es.js"></script>
+    <script src="testlistfmt_fa.js"></script>
+    <script src="testlistfmt_fr_FR.js"></script>
+    <script src="testlistfmt_ja_JP.js"></script>
+    <script src="testlistfmt_zh.js"></script>
     <script src="testnorm.js"></script>
   </head>
   <body>
