Add more testcases to verify ListFormatter

--- a/js/test/strings-ext/nodeunit/testSuite.html
+++ b/js/test/strings-ext/nodeunit/testSuite.html
@@ -33,11 +33,23 @@ limitations under the License.
     <script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_ar.js"></script>
+    <script src="testlistfmt_bs.js"></script>
+    <script src="testlistfmt_de.js"></script>
+    <script src="testlistfmt_el.js"></script>
     <script src="testlistfmt_en.js"></script>
     <script src="testlistfmt_es.js"></script>
     <script src="testlistfmt_fa.js"></script>
-    <script src="testlistfmt_fr_FR.js"></script>
+    <script src="testlistfmt_fr.js"></script>
+    <script src="testlistfmt_hr.js"></script>
+    <script src="testlistfmt_it.js"></script>
+    <script src="testlistfmt_ms.js"></script>
+    <script src="testlistfmt_nl.js"></script>
     <script src="testlistfmt_ja_JP.js"></script>
+    <script src="testlistfmt_pt.js"></script>
+    <script src="testlistfmt_ru.js"></script>
+    <script src="testlistfmt_sq.js"></script>
+    <script src="testlistfmt_sv.js"></script>
+    <script src="testlistfmt_tr.js"></script>
     <script src="testlistfmt_zh.js"></script>
     <script src="testnorm.js"></script>
   </head>
