--- a/js/test/testSuite.html
+++ b/js/test/testSuite.html
@@ -1,5 +1,5 @@
 <!--
-testSuite.js - Run all tests
+testSuite.html - Run all tests
 
 Copyright © 2012-2017, JEDLSoft
 
@@ -18,35 +18,91 @@ limitations under the License.
 -->
 
 <html>
-<head>
-<script type="text/javascript" src="../../tools/jsunit/app/jsUnitCore.js"></script>
-<script>
-var iframes = parent.document.getElementsByName("testFrame");
-var url = iframes[0].contentDocument.location.href;
-var i = url.lastIndexOf("/");
-var dir = (i !== -1 ? url.substring(0, i+1) : url);
-
-function suite() {
-    var calSuite = new JsUnitTestSuite();
-    
-    calSuite.addTestPage(dir + "root/test/testSuite.html");
-    calSuite.addTestPage(dir + "name/test/testSuite.html");
-    calSuite.addTestPage(dir + "date/test/testSuite.html");
-    calSuite.addTestPage(dir + "daterange/test/testSuite.html");
-    calSuite.addTestPage(dir + "durfmt/test/testSuite.html");
-    calSuite.addTestPage(dir + "phone/test/testSuite.html");
-    calSuite.addTestPage(dir + "ctype/test/testSuite.html");
-    calSuite.addTestPage(dir + "collate/test/testSuite.html");
-    calSuite.addTestPage(dir + "number/test/testSuite.html");
-    calSuite.addTestPage(dir + "units/test/testSuite.html");
-    calSuite.addTestPage(dir + "maps/test/testSuite.html");
-    calSuite.addTestPage(dir + "strings-ext/test/testSuite.html");
-    calSuite.addTestPage(dir + "util/test/testSuite.html");
-    calSuite.addTestPage(dir + "calendar/test/testSuite.html");
-    calSuite.addTestPage(dir + "address/test/testSuite.html");
- 
-    return calSuite;
-}
-</script>
-</head>
+  <head>
+    <title>Test Suite</title>
+    <link rel="stylesheet" href="/test/nodeunit/nodeunit.css" type="text/css" />
+    <script>
+        var module = {};
+    </script>
+    <script src="/test/nodeunit/nodeunit.js"></script>
+    <script src="/output/js/ilib-ut.js"></script>
+	<script src="strings-ext/test/normdata.js"></script>
+    <script>
+	    var suites = {};
+        module = {
+            exports: {}
+        };
+        function loadTests(suite) {
+            for (var prop in module.exports.files) {
+                document.write("<scrip" + 't src="' + suite + "/nodeunit/" + module.exports.files[prop] + '"></scr' + "ipt>");
+            }
+        }
+    </script>
+    <script src="root/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("root");
+	</script>
+    <script src="name/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("name");
+	</script>
+    <script src="date/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("date");
+	</script>
+    <script src="daterange/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("daterange");
+	</script>
+    <script src="durfmt/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("durfmt");
+	</script>
+    <script src="phone/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("phone");
+	</script>
+    <script src="ctype/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("ctype");
+	</script>
+    <script src="collate/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("collate");
+	</script>
+    <script src="number/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("number");
+	</script>
+    <script src="units/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("units");
+	</script>
+    <script src="maps/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("maps");
+	</script>
+    <script src="strings-ext/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("strings-ext");
+	</script>
+    <script src="util/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("util");
+	</script>
+    <script src="calendar/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("calendar");
+	</script>
+    <script src="address/nodeunit/testSuiteFiles.js"></script>
+	<script>
+		loadTests("address");
+	</script>
+  </head>
+  <body>
+    <h1 id="nodeunit-header">iLib All Test Suites</h1>
+    <script>
+     nodeunit.run(module.exports);
+    </script>
+  </body>
 </html>
