Fix wrong textcases and minor imiplementation

--- a/js/test/collate/nodeunit/testSuite.html
+++ b/js/test/collate/nodeunit/testSuite.html
@@ -30,7 +30,7 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testcollation.js"></script>
+    <!--<script src="testcollation.js"></script>
     <script src="testcollation_cs.js"></script>
     <script src="testcollation_da.js"></script>
     <script src="testcollation_de.js"></script>
@@ -53,7 +53,10 @@ limitations under the License.
     <script src="testcollation_sv.js"></script>
     <script src="testcollation_tr.js"></script>
     <script src="testcollation_zh-Hans.js"></script>
-    <script src="testcollation_zh-Hant.js"></script>
+    <script src="testcollation_zh-Hant.js"></script>-->
+    <script src="testalphaindex.js"></script>
+    <script src="testalphaindex_de.js"></script>
+
   </head>
   <body>
     <h1 id="nodeunit-header">collate Test Suite</h1>
