Implement Korean alphabeticIndex

--- a/js/test/collate/nodeunit/testSuite.html
+++ b/js/test/collate/nodeunit/testSuite.html
@@ -32,6 +32,7 @@ limitations under the License.
     </script>
     <script src="testalphaindex.js"></script>
     <script src="testalphaindex_de.js"></script>
+    <script src="testalphaindex_ko.js"></script>
     <script src="testcollation.js"></script>
     <script src="testcollation_cs.js"></script>
     <script src="testcollation_da.js"></script>
