--- a/js/test/testSuite.html
+++ b/js/test/testSuite.html
@@ -25,7 +25,9 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ilib-ut.js"></script>
+    <script src="/output/js/ut/assembled/ilib-ut.js"></script>
+    <script src="/lib/ilib-getdata.js"></script>
+    <script src="/lib/ilib-unpack.js"></script>
 	<script src="strings-ext/test/normdata.js"></script>
     <script>
 	    var suites = {};
