Added some tests for Path.js to make sure it works right.
Also added Path.basename() call.

--- a/js/test/util/nodeunit/testSuite.html
+++ b/js/test/util/nodeunit/testSuite.html
@@ -32,6 +32,7 @@ limitations under the License.
     </script>
     <script src="testset.js"></script>
     <script src="testutils.js"></script>
+    <script src="testpath.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">util Test Suite</h1>
