--- a/js/test/testSuite.html
+++ b/js/test/testSuite.html
@@ -26,7 +26,7 @@ limitations under the License.
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
     <script src="/output/js/ut/assembled/ilib-ut.js"></script>
-    <script src="/lib/ilib-getdata.js"></script>
+    <!--   script src="/lib/ilib-getdata.js"></script -->
     <script src="/lib/ilib-unpack.js"></script>
 	<script src="strings-ext/test/normdata.js"></script>
     <script>
