--- a/js/test/strings-ext/nodeunit/testSuite.html
+++ b/js/test/strings-ext/nodeunit/testSuite.html
@@ -24,14 +24,15 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ilib-ut.js"></script>
+    <script src="/output/js/ut/assembled/ilib-ut.js"></script>
+    <script src="/lib/ilib-unpack.js"></script>
     <script src="/test/strings-ext/test/normdata.js"></script>
     <script>
         module = {
             exports: {}
         };
     </script>
-    <script src="testglyphstr.js"></script>
+    <!--  script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
     <script src="testlistfmt_ar.js"></script>
@@ -67,7 +68,7 @@ limitations under the License.
     <script src="testlistfmt_tr.js"></script>
     <script src="testlistfmt_uk_UA.js"></script>
     <script src="testlistfmt_ur.js"></script>
-    <script src="testlistfmt_zh.js"></script>
+    <script src="testlistfmt_zh.js"></script -->
     <script src="testnorm.js"></script>
   </head>
   <body>
