--- a/js/test/phone/nodeunit/testSuite.html
+++ b/js/test/phone/nodeunit/testSuite.html
@@ -24,7 +24,8 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ilib-ut.js"></script>
+    <script src="/output/js/ut/assembled/ilib-ut.js"></script>
+    <script src="/lib/ilib-unpack.js"></script>
     <script>
         module = {
             exports: {}
