--- a/js/test/date/nodeunit/testSuite.html
+++ b/js/test/date/nodeunit/testSuite.html
@@ -31,7 +31,9 @@ limitations under the License.
         };
     </script>
     <script src="testdate.js"></script>
+    <script src="testdateasync.js"></script>
     <script src="testdatefmt.js"></script>
+    <script src="testdatefmtasync.js"></script>
     <script src="testdatefmt_af_NA.js"></script>
     <script src="testdatefmt_af_ZA.js"></script>
     <script src="testdatefmt_am_ET.js"></script>
