Added async tests
They do not pass yet.

--- a/js/test/date/nodeunit/testSuiteAsync.html
+++ b/js/test/date/nodeunit/testSuiteAsync.html
@@ -30,7 +30,8 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testdate.js"></script>
+    <script src="testdateasync.js"></script>
+    <script src="testdatefmtasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">Async Date Test Suite</h1>
