Async and sync ctype tests now all pass

--- a/js/test/ctype/nodeunit/testSuiteAsync.html
+++ b/js/test/ctype/nodeunit/testSuiteAsync.html
@@ -30,7 +30,7 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testctype.js"></script>
+    <script src="testctypeasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">Async ctype Test Suite</h1>
