DateRngFmt tests work sync and async
Calendar and calendar date tests have been implemented but do not work yet.

--- a/js/test/daterange/nodeunit/testSuite.html
+++ b/js/test/daterange/nodeunit/testSuite.html
@@ -31,6 +31,7 @@ limitations under the License.
         };
     </script>
     <script src="testdatefmtrange.js"></script>
+    <script src="testdatefmtrangeasync.js"></script>
     <script src="testdatefmtrange_af_NA.js"></script>
     <script src="testdatefmtrange_af_ZA.js"></script>
     <script src="testdatefmtrange_am_ET.js"></script>
