--- a/js/test/daterange/nodeunit/testSuiteAsync.html
+++ b/js/test/daterange/nodeunit/testSuiteAsync.html
@@ -30,7 +30,7 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testdatefmtrange.js"></script>
+    <script src="testdatefmtrangeasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">Async Daterange Test Suite</h1>
