Async and sync toot unit tests all pass now

--- a/js/test/root/nodeunit/testSuite.html
+++ b/js/test/root/nodeunit/testSuite.html
@@ -41,6 +41,13 @@ limitations under the License.
     <script src="testresources.js"></script>
     <script src="testscriptinfo.js"></script>
     <script src="teststrings.js"></script>
+    <script src="testcharsetasync.js"></script>
+    <script src="testcountryasync.js"></script>
+    <script src="testlocaleinfoasync.js"></script>
+    <script src="testlocalematchasync.js"></script>
+    <script src="testresourcesasync.js"></script>
+    <script src="testscriptinfoasync.js"></script>
+    <script src="teststringsasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">root Test Suite</h1>
