--- a/js/test/root/nodeunit/testSuiteAsync.html
+++ b/js/test/root/nodeunit/testSuiteAsync.html
@@ -1,7 +1,7 @@
 <!--
-testSuite.html - browser-based test suite for this directory
+testSuiteAsync.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -30,17 +30,13 @@ limitations under the License.
             exports: {}
         };
     </script>
-    <script src="testcharset.js"></script>
-    <script src="testcountry.js"></script>
-    <script src="testglobal.js"></script>
-    <script src="testloader.js"></script>
-    <script src="testlocale.js"></script>
-    <script src="testlocaleinfo.js"></script>
-    <script src="testlocalematch.js"></script>
-    <script src="testrequire.js"></script>
-    <script src="testresources.js"></script>
-    <script src="testscriptinfo.js"></script>
-    <script src="teststrings.js"></script>
+    <script src="testcharsetasync.js"></script>
+    <script src="testcountryasync.js"></script>
+    <script src="testlocaleinfoasync.js"></script>
+    <script src="testlocalematchasync.js"></script>
+    <script src="testresourcesasync.js"></script>
+    <script src="testscriptinfoasync.js"></script>
+    <script src="teststringsasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">root Test Suite</h1>
