Async and sync number and name unit tests all pass

--- a/js/test/name/nodeunit/testSuite.html
+++ b/js/test/name/nodeunit/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017-2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -31,6 +31,7 @@ limitations under the License.
         };
     </script>
     <script src="testname.js"></script>
+    <script src="testnameasync.js"></script>
     <script src="testname_ar.js"></script>
     <script src="testname_bg.js"></script>
     <script src="testname_bn.js"></script>
@@ -88,9 +89,10 @@ limitations under the License.
     <script src="testname_zh_Hans.js"></script>
     <script src="testname_zh_Hant.js"></script>
     <script src="testnamefmt.js"></script>
+    <script src="testnamefmtasync.js"></script>
   </head>
   <body>
-    <h1 id="nodeunit-header">name Test Suite</h1>
+    <h1 id="nodeunit-header">Name Test Suite</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
