--- a/js/test/name/nodeunit/testSuiteAsync.html
+++ b/js/test/name/nodeunit/testSuiteAsync.html
@@ -1,7 +1,7 @@
 <!--
-testSuite.html - browser-based test suite for this directory
+testSuiteAsync.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -24,73 +24,17 @@ limitations under the License.
         var module = {};
     </script>
     <script src="/test/nodeunit/nodeunit.js"></script>
-    <script src="/output/js/ut/assembled/ilib-ut.js"></script>
+    <script src="/output/js/ut/assembled/ilib-ut-dyn.js"></script>
     <script>
         module = {
             exports: {}
         };
     </script>
-    <script src="testname.js"></script>
-    <script src="testname_ar.js"></script>
-    <script src="testname_bg.js"></script>
-    <script src="testname_bn.js"></script>
-    <script src="testname_bs.js"></script>
-    <script src="testname_cs.js"></script>
-    <script src="testname_da.js"></script>
-    <script src="testname_de.js"></script>
-    <script src="testname_el.js"></script>
-    <script src="testname_en.js"></script>
-    <script src="testname_es.js"></script>
-    <script src="testname_et.js"></script>
-    <script src="testname_fa.js"></script>
-    <script src="testname_fi.js"></script>
-    <script src="testname_fr.js"></script>
-    <script src="testname_ga.js"></script>
-    <script src="testname_gu.js"></script>
-    <script src="testname_he.js"></script>
-    <script src="testname_hi.js"></script>
-    <script src="testname_hr.js"></script>
-    <script src="testname_hu.js"></script>
-    <script src="testname_id.js"></script>
-    <script src="testname_it.js"></script>
-    <script src="testname_ja.js"></script>
-    <script src="testname_kk.js"></script>
-    <script src="testname_kn.js"></script>
-    <script src="testname_ko.js"></script>
-    <script src="testname_ku_Arab.js"></script>
-    <script src="testname_lt.js"></script>
-    <script src="testname_lv.js"></script>
-    <script src="testname_mk.js"></script>
-    <script src="testname_ml.js"></script>
-    <script src="testname_mn_Cyrl.js"></script>
-    <script src="testname_mr.js"></script>
-    <script src="testname_ms.js"></script>
-    <script src="testname_nb.js"></script>
-    <script src="testname_nl.js"></script>
-    <script src="testname_pa.js"></script>
-    <script src="testname_pl.js"></script>
-    <script src="testname_pt.js"></script>
-    <script src="testname_ro.js"></script>
-    <script src="testname_ru.js"></script>
-    <script src="testname_sk.js"></script>
-    <script src="testname_sl.js"></script>
-    <script src="testname_sq.js"></script>
-    <script src="testname_sr.js"></script>
-    <script src="testname_sv.js"></script>
-    <script src="testname_ta.js"></script>
-    <script src="testname_te.js"></script>
-    <script src="testname_tr.js"></script>
-    <script src="testname_uk.js"></script>
-    <script src="testname_ur.js"></script>
-    <script src="testname_uz_Cyrl.js"></script>
-    <script src="testname_uz_Latn.js"></script>
-    <script src="testname_vi.js"></script>
-    <script src="testname_zh_Hans.js"></script>
-    <script src="testname_zh_Hant.js"></script>
-    <script src="testnamefmt.js"></script>
+    <script src="testnameasync.js"></script>
+    <script src="testnamefmtasync.js"></script>
   </head>
   <body>
-    <h1 id="nodeunit-header">name Test Suite</h1>
+    <h1 id="nodeunit-header">Async Name Test Suite</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
