Async and sync phone unit tests now pass.
But, some other tests seem to have broken... need more fixes.

--- a/js/test/phone/nodeunit/testSuite.html
+++ b/js/test/phone/nodeunit/testSuite.html
@@ -90,6 +90,13 @@ limitations under the License.
     <script src="testphonenum_SG.js"></script>
     <script src="testphonenum_TW.js"></script>
     <script src="testphonenum_US.js"></script>
+    <script src="testimsi.js"></script>
+    <script src="testnormalizeasync.js"></script>
+    <script src="testnumplan.js"></script>
+    <script src="testphonefmt_AU.js"></script>
+    <script src="testphonegeo.js"></script>
+    <script src="testphoneloc.js"></script>
+    <script src="testphonenum.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">phone Test Suite</h1>
