--- a/js/test/units/nodeunit/testSuite.html
+++ b/js/test/units/nodeunit/testSuite.html
@@ -1,7 +1,7 @@
 <!--
 testSuite.html - browser-based test suite for this directory
 
-Copyright © 2017, JEDLSoft
+Copyright © 2017-2018, JEDLSoft
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
@@ -44,6 +44,7 @@ limitations under the License.
     <script src="testtime.js"></script>
     <script src="testunitfmt.js"></script>
     <script src="testunits.js"></script>
+    <script src="testunitfmtasync.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">units Test Suite</h1>
