Add async tests to the ant builds

--- a/js/test/testSuiteAsync.html
+++ b/js/test/testSuiteAsync.html
@@ -86,10 +86,6 @@ limitations under the License.
 	<script>
 		loadTests("strings-ext");
 	</script>
-    <script src="util/nodeunit/testSuiteFilesAsync.js"></script>
-	<script>
-		loadTests("util");
-	</script>
     <script src="calendar/nodeunit/testSuiteFilesAsync.js"></script>
 	<script>
 		loadTests("calendar");
@@ -100,7 +96,7 @@ limitations under the License.
 	</script>
   </head>
   <body>
-    <h1 id="nodeunit-header">iLib All Test Suites</h1>
+    <h1 id="nodeunit-header">iLib All Async Test Suites</h1>
     <script>
      nodeunit.run(module.exports);
     </script>
