Added some unit tests. Not enough. Need more.

--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -31,6 +31,7 @@ limitations under the License.
             exports: {}
         };
     </script>
+    <script src="testbreakit.js"></script>
     <script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
@@ -94,4 +95,4 @@ limitations under the License.
      nodeunit.run(module.exports);
     </script>
   </body>
-</html>
+</html>d
