Added some unit tests. Not enough. Need more.

--- a/js/test/strings-ext/nodeunit/testSuite.html
+++ b/js/test/strings-ext/nodeunit/testSuite.html
@@ -30,6 +30,7 @@ limitations under the License.
             exports: {}
         };
     </script>
+    <script src="testbreakit.js"></script>
     <script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
