Added unit tests for English

--- a/js/test/strings-ext/testSuite.html
+++ b/js/test/strings-ext/testSuite.html
@@ -32,6 +32,7 @@ limitations under the License.
         };
     </script>
     <script src="testbreakit.js"></script>
+    <script src="testbreakit_en.js"></script>
     <script src="testglyphstr.js"></script>
     <script src="testlistfmt.js"></script>
     <script src="testlistfmt_am_ET.js"></script>
