BreakIterator tests now run in the browser and in node
They don't pass, but at least now they run properly.

--- a/js/test/strings-ext/nodeunit/testSuite.html
+++ b/js/test/strings-ext/nodeunit/testSuite.html
@@ -30,6 +30,13 @@ limitations under the License.
             exports: {}
         };
     </script>
+    <script src="/test/strings-ext/test/normdata.js"></script>
+    <script src="wordBreakData.js"></script>
+    <script>
+        module = {
+            exports: {}
+        };
+    </script>
     <script src="testbreakit.js"></script>
     <script src="testbreakit_en.js"></script>
     <script src="testglyphstr.js"></script>
