Added digital speed units

--- a/js/test/units/nodeunit/testSuite.html
+++ b/js/test/units/nodeunit/testSuite.html
@@ -45,6 +45,7 @@ limitations under the License.
     <script src="testunitfmt.js"></script>
     <script src="testunits.js"></script>
     <script src="testunitfmtasync.js"></script>
+    <script src="testdigitalspeed.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">units Test Suite</h1>
