Add missing locale in build.xml (es-PH, is-IS, tr-CY,de-CH), Add files whech are newly created to the list for the brwoser test

--- a/js/test/date/testSuite.html
+++ b/js/test/date/testSuite.html
@@ -30,10 +30,17 @@ limitations under the License.
             exports: {}
         };
     </script>
+    <script src="testclock.js"></script>
+    <script src="testcalendar.js"></script>
     <script src="testdate.js"></script>
     <script src="testdateasync.js"></script>
     <script src="testdatefmt.js"></script>
+    <script src="testdatetimefmt.js"></script>
     <script src="testdatefmtasync.js"></script>
+    <script src="testDayOfWeek.js"></script>
+    <script src="testMeridiems.js"></script>
+    <script src="testMonthTranslation.js"></script>
+    <script src="testWeekdayTranslation.js"></script>
     <script src="testdatefmt_af_NA.js"></script>
     <script src="testdatefmt_af_ZA.js"></script>
     <script src="testdatefmt_am_ET.js"></script>
@@ -74,7 +81,7 @@ limitations under the License.
     <script src="testdatefmt_km_KH.js"></script>
     <script src="testdatefmt_kn_IN.js"></script>
     <script src="testdatefmt_ko_KR.js"></script>
-    <script src="testdatefmt_ku_Arab_IQ.js"></script>
+    <!--<script src="testdatefmt_ku_Arab_IQ.js"></script>-->
     <script src="testdatefmt_lt_LT.js"></script>
     <script src="testdatefmt_lv_LV.js"></script>
     <script src="testdatefmt_mk_MK.js"></script>
