--- a/js/test/daterange/testSuite.html
+++ b/js/test/daterange/testSuite.html
@@ -107,6 +107,7 @@ limitations under the License.
     <script src="testdatefmtrange_zh_Hans_CN.js"></script>
     <script src="testdatefmtrange_zh_Hant_HK.js"></script>
     <script src="testdatefmtrange_zh_Hant_TW.js"></script>
+    <script src="testdatefmtrange_fmttemplate.js"></script>
   </head>
   <body>
     <h1 id="nodeunit-header">daterange Test Suite</h1>
