--- a/js/test/durfmt/testSuite.html
+++ b/js/test/durfmt/testSuite.html
@@ -31,6 +31,7 @@ limitations under the License.
         };
     </script>
     <script src="testdurfmt.js"></script>
+    <script src="testdurfmt2.js"></script>
     <script src="testdurfmt_am_ET.js"></script>
     <script src="testdurfmt_ar_SA.js"></script>
     <script src="testdurfmt_az_Latn_AZ.js"></script>
