--- a/js/test/number/testSuite.html
+++ b/js/test/number/testSuite.html
@@ -33,6 +33,7 @@ limitations under the License.
     <script src="testcurrency.js"></script>
     <script src="testcurrencyasync.js"></script>
     <script src="testnumfmt.js"></script>
+    <script src="testnumfmt2.js"></script>
     <script src="testnumfmtasync.js"></script>
     <script src="testnumfmt_af.js"></script>
     <script src="testnumfmt_am.js"></script>
